# rdkfwupdater

./: .gitignore  ANALYSIS_code_review_report_Version2.md  API_DOCUMENTATION_COMPLETE_INDEX.md  API_DOCUMENTATION_GENERATION_SUMMARY.md  API_DOCUMENTATION_checkForUpdate.md  API_DOCUMENTATION_downloadFirmware.md  API_DOCUMENTATION_updateFirmware.md  ASYNC_MEMORY_MANAGEMENT.md  BATCH_1_COMPILATION_FIXES_COMPLETE.md  BATCH_P1_B1_EXECUTION_PLAN.md  BATCH_P1_B1_IMPLEMENTATION_SUMMARY.md  BATCH_P1_B1_QUICK_REFERENCE.md  BUILD_CHECKFORUPDATE.md  CHANGELOG.md  CHECKFORUPDATE_ASYNC_IMPLEMENTATION_PLAN.md  COMPLETE_ANALYSIS_AND_IMPLEMENTATION.md  COMPLETE_PROJECT_ROADMAP.md  CheckForUpdate_Notes.md  DEMO_Comments.md  DOCUMENTATION_INDEX.md  EXAMPLE_INSTALLATION_SUMMARY.md  EXECUTIVE_SUMMARY.md  EXIT_CALL_ELIMINATION_GUIDE.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_PLAN_CHECKFORUPDATE_ASYNC.md  IMPLEMENTATION_SUMMARY.md  Initial_REVIEW_rdkv_dbus_server.md  LINK_TIME_SYMBOL_INTERPOSITION.md  Makefile.am  Makefile.in  NOTICE  OPTOUT_DECISION_TABLE.md  OPTOUT_FEATURE_GUIDE.md  PHASE1_BATCH_PLANS.md  PHASE1_PROGRESS_REPORT.md  PHASE2_INTEGRATION_PLANS.md  PHASE3_DOWNLOAD_FLASH_PLANS.md  PHASE4_QUALITY_PLANS.md  PHASE_6_MEMORY_VALIDATION_PLAN.md  PHASE_6_QUICK_START.md  (+22 more)
.github/workflows/: L1-Test.yaml  L2-tests.yml  code-coverage.yaml  native_full_build.yml
KnowWhereItBreaks/.deps/: KnowWhereItBreaks-KnowWhereItBreaks.Po
autom4te.cache/: output.1  output.3  requests  traces.0  traces.1  traces.2
doc/: Doxyfile
docs/: CHECKFORUPDATE_PROGRESS.md  CODEREVIEW_REPORT.txt  DBUS_codereview.txt  DESIGN_CHECKFORUPDATE_ON_DEMAND_THREAD.md  DESIGN_DOWNLOAD_FIRMWARE_ON_DEMAND_THREAD.md  DESIGN_UPDATEFIRMWARE_ON_DEMAND_THREAD.md  DOWNLOADFIRMWARE_PROGRESS.md  KNOWWHEREITBREAKS_README.md  KnowWhereItBreaks.md  LIBRARY_API_DESIGN_GUIDE.md  README.md  TRACKING_DOWNLOADFIRMWARE_REDESIGN.md  TRACKING_KWIB_TEST_UTILITY.md
implementation_docs/: ASYNC_API_QUICK_REFERENCE.md  CHECKFORUPDATE_IMPLEMENTATION_SUMMARY.md  CURRENT_STATUS_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  PHASE_0_ANALYSIS_RESULTS.md  PHASE_6_PROGRESS_REPORT.md  PHASE_6_SESSION_SUMMARY.md  REPOSITORY_STATUS_REPORT.md
implementation_docs/implementation_docs/: BUILD_AND_TEST.md  CALLBACK_REGISTRATION_AND_FIRING.md  CHECKFORUPDATE_DESIGN_REVIEW.md  CHECKFORUPDATE_DETAILED_FLOW.md  CHECKFORUPDATE_IMMEDIATE_VS_CALLBACK.md  CHECKFORUPDATE_TIMEOUT_ANALYSIS.md  README.md  THREADING_MODEL_EXPLAINED.md
kwib_src/: KnowWhereItBreaks.c  KnowWhereItBreaks_README.md  USAGE_KWIB.md
librdkFwupdateMgr/: API_DOCUMENTATION_registerProcess.md  API_DOCUMENTATION_unregisterProcess.md  CHECKFORUPDATE_FINAL_STATUS.md  CHECK_FOR_UPDATE_API.md  DESIGN_DOCUMENT.md  IMPLEMENTATION_README.md  Makefile  Makefile.am  PROCESS_REGISTRATION_API.md  PR_REVIEW_DEFENSE.md  QUICK_START.md  README.md  REVIEW_rdkFwupdateMgr_hanlders.md  SUBTASK1_COMPLETE.md  SUBTASK2_CHECKLIST.md
librdkFwupdateMgr/docs/: DESIGN_DOCUMENT.md  DOCUMENT_v1.md  VISUAL_DESIGN_DOCUMENT.md  librdkFwupdateMgr_CodeReview.md
librdkFwupdateMgr/examples/: EXAMPLE_APP_README.md  README.md  example_app.c  example_async_checkforupdate.c  example_checkforupdate.c  example_plugin_registration.c
librdkFwupdateMgr/include/: rdkFwupdateMgr_client.h  rdkFwupdateMgr_process.h
librdkFwupdateMgr/src/: api_impl.c  dbus_client.c  dbus_client.h  event_loop.c  event_loop.h  handle_mgr.c  handle_mgr.h  handle_registry.h  rdkFwupdateMgr_api.c  rdkFwupdateMgr_async.c  rdkFwupdateMgr_async_api.c  rdkFwupdateMgr_async_internal.h  rdkFwupdateMgr_log.c  rdkFwupdateMgr_log.h  rdkFwupdateMgr_process.c  signal_handler.c  signal_handler.h
librdkFwupdateMgr/test/: test_register.c
openspec/: gaps-and-unknowns.md  project.md
openspec/dbus/: dbus-architecture.md
openspec/diagrams/: architecture-diagrams.md  subsystem-architecture.md
openspec/runtime/: client-daemon-interaction.md  daemon-threading-model.md  firmware-update-flows.md  rdkFwupdateMgr-lifecycle.md  rdkFwupdateMgr-sequence.md  rdkvfwupgrader-lifecycle.md  rdkvfwupgrader-sequence.md
openspec/specs/: cedmInterface.md  dbus_server.md  device_status_helper.md  deviceutils.md  flash.md  iarmInterface.md  json_process.md  librdkFwupdateMgr.md  rbusInterface.md  rdkFwupdateMgr_daemon.md  (+3 more)
src/: chunk.c  device_status_helper.c  directcdn.c  download_status_helper.c  flash.c  json_process.c  rdkFwupdateMgr.c  rdkv_deamon.c  rdkv_main.c  rdkv_upgrade.c
test/: memory_validation.sh  phase6_complete_validation.sh  testiarmInterface.c  testiarmInterface.h  xconf-certbundle-response.json
unittest/: .gitignore  Makefile  Makefile.am  Makefile.in  basic_rdkv_main_gtest.cpp  ca-store-update-bundle_package.json  config.status  configure  configure.ac  dbus_handlers.cpp  device_status_helper_gtest.cpp  deviceutils_mock_global.h  fwdl_interface_gtest.cpp  libtool  miscellaneous.h  miscellaneous_mock.cpp  rc-proxy-params.json  rdkFwupdateMgr_async_cleanup_gtest.cpp  rdkFwupdateMgr_async_refcount_gtest.cpp  rdkFwupdateMgr_async_signal_gtest.cpp  rdkFwupdateMgr_async_stress_gtest.cpp  rdkFwupdateMgr_async_threadsafety_gtest.cpp  rdkFwupdateMgr_handlers_gtest.cpp  rdkfw_interface_gtest-fwdl_interface_gtest.gcno  rdkfwupdatemgr_gtest.cpp  rdkfwupdatemgr_main_flow_gtest.cpp  rdkv_cdl_log_wrapper.h  test_dbus_fake.cpp  test_dbus_fake.h
unittest/.deps/: rdkfw_interface_gtest-fwdl_interface_gtest.Tpo
unittest/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1
unittest/deviceutils/: device_api_gtest.cpp  deviceutils_gtest.cpp  json_parse.c  json_parse.h
unittest/deviceutils/.deps/: rdkfw_deviceutils_gtest-device_api_gtest.Tpo
unittest/mocks/: dbus_handlers_gmock.cpp  dbus_handlers_gmock.h  device_status_helper_mock.cpp  device_status_helper_mock.h  deviceutils_mock.cpp  deviceutils_mock.h  iarmInterface_mock.cpp  iarmInterface_mock.h  iarmInterface_test_stubs.h  iarm_interface_mock.c  iarm_interface_mock.h  interface_mock.cpp  interface_mock.h  mock_rbus.c  mock_rbus.h  rbus_mock.c  rbus_mock.h  rdkFwupdateMgr_mock.cpp  rdkFwupdateMgr_mock.h
(+109 files in other folders)
